rename the disposable tracker for structs and add optimizing Release build

--- a/src/Disposal/project.json
+++ b/src/Disposal/project.json
@@ -6,7 +6,19 @@
 	"tags": [ "disposable", "dispose", "idisposable" ],
 	"projectUrl": "https://github.com/NickStrupat/Disposal",
 	"licenseUrl": "https://raw.githubusercontent.com/NickStrupat/Disposal/master/LICENSE",
-
+	"configurations": {
+		"Debug": {
+			"compilationOptions": {
+				"define": [ "DEBUG", "TRACE" ]
+			}
+		},
+		"Release": {
+			"compilationOptions": {
+				"define": [ "RELEASE", "TRACE" ],
+				"optimize": true
+			}
+		}
+	},
 	"frameworks": {
 		"net451": {
 			"compilationOptions": { "define": [ "DYNAMIC_ASSEMBLY_SAVEABLE" ] }
