--- a/src/Disposal/project.json
+++ b/src/Disposal/project.json
@@ -27,22 +27,14 @@
 		},
 		"netcoreapp1.0": {
 			"dependencies": {
-				"Microsoft.CSharp": "4.0.1-rc2-24027",
-				"System.Collections": "4.0.11-rc2-24027",
-				"System.Collections.Concurrent": "4.0.12-rc2-24027",
-				"System.Linq": "4.1.0-rc2-24027",
-				"System.Runtime": "4.1.0-rc2-24027",
-				"System.Threading": "4.0.11-rc2-24027",
-				"System.Reflection.Emit": "4.0.1-rc2-24027",
-				"System.Reflection.Emit.Lightweight": "4.0.1-rc2-24027",
-				"System.Reflection.Extensions": "4.0.1-rc3-23829",
-				"System.Reflection.TypeExtensions": "4.1.0-rc3-23829",
-				"System.Runtime.InteropServices": "4.1.0-rc3-23829"
+				"Microsoft.NETCore.App": {
+					"type": "platform",
+					"version": "1.0.0"
+				},
+				"System.Reflection.Emit.ILGeneration": "4.0.1",
+				"System.Reflection.Emit.Lightweight": "4.0.1"
 			},
-			"imports": [
-				"dnxcore50",
-				"portable-net45+win8"
-			]
+			"imports": "dnxcore50"
 		}
 	}
 }
