move tests library to test folder

--- a/test/Tests/Tests.csproj
+++ b/test/Tests/Tests.csproj
@@ -16,7 +16,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Disposal\Disposal.csproj" />
+    <ProjectReference Include="..\..\src\Disposal\Disposal.csproj" />
   </ItemGroup>
 
 </Project>
