--- a/src/Disposal/Disposal.csproj
+++ b/src/Disposal/Disposal.csproj
@@ -30,6 +30,8 @@
 
   <ItemGroup>
     <PackageReference Include="System.Memory" Version="4.5.3" />
+    <PackageReference Include="System.Reflection.Emit.ILGeneration" Version="4.3.0" />
+    <PackageReference Include="System.Reflection.Emit.Lightweight" Version="4.3.0" />
   </ItemGroup>
 
 </Project>
